fix: text aligning

--- a/src/app/modules/shared/components/header/header.component.scss
+++ b/src/app/modules/shared/components/header/header.component.scss
@@ -1,4 +1,4 @@
-@use "/src/style/variables.scss" as vars;
+@use "/src/style/variables.scss" as *;
 
 header {
   padding: 1.5em 3rem;
@@ -19,8 +19,8 @@ header {
     margin-top: 32px;
 
     p {
-      color: #000;
-      text-align: justify;
+      color: $grey-700;
+      text-align: center;
       line-height: 20px;
     }
   }
